objects/Account_Final_Staging__c.object
<CustomObject>
    <description>This is used for data sync from AOPS to SFDC.</description>
    <fields>
        <fullName>AOPS_Cust_Id__c</fullName>
        <description>AOPS Customer Account Number</description>
        <externalId>true</externalId>
        <label>AOPS Id</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AOPS_Seq_ID__c</fullName>
        <label>AOPS Seq ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Setup_Request_Status__c</fullName>
        <label>Setup Request Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTRACT_RETAIL_CUST_CODE__c</fullName>
        <label>Contract Or Retail Customer</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTF005P_SFDC_KEY1__c</fullName>
        <description>SFDC Account ID</description>
        <label>CXTF005P SFDC KEY1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Postscript__c</fullName>
        <label>Community Postscript</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Restriction__c</fullName>
        <label>Customer Restriction</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_Charge__c</fullName>
        <label>Deliver Charge</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dept_Req_Code__c</fullName>
        <label>Dept Req Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Opt_In__c</fullName>
        <label>Email Opt In</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU370P_VEHICLE_CODE__c</fullName>
        <label>FCU370P VEHICLE CODE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forms_Customer_Flag__c</fullName>
        <label>Forms Customer Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Charge__c</fullName>
        <description>Small order delivery fee</description>
        <label>Freight Charge</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Forwarder_Account__c</fullName>
        <label>Freight Forwarder Account</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Use_Reserved__c</fullName>
        <label>Future Use Reserved</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSA__c</fullName>
        <label>GSA</label>
        <length>84</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy__c</fullName>
        <label>Hierarchy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hosted_Catalog_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hosted Catalog Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Account_Addendum_Community_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Account Addendum Community Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Account_Addendum_Legal_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Account Addendum Legal Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Account_BSD_Addendum_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Account BSD Addendum Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Account_Master_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Account Master Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Account_OptIn_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Account OptIn Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Parent_Account_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Parent Account Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legal_Flag__c</fullName>
        <label>Legal Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Req_Code__c</fullName>
        <label>Location Req Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loyalty_Type__c</fullName>
        <description>Loyality Program</description>
        <label>Loyalty Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Sales TAM</fullName>
                </value>
                <value>
                    <fullName>OD Rewards Platinum</fullName>
                </value>
                <value>
                    <fullName>Regular - No Loyalty Flag</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mail_Opt_In__c</fullName>
        <label>Mail Opt In</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Order_Limit__c</fullName>
        <label>Max Order Limit</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mobile_Opt_In__c</fullName>
        <label>Mobile Opt In</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Attempts__c</fullName>
        <label>Number Of Attempts</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OptIn_Change_Timestamp__c</fullName>
        <label>OptIn Change Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Oracle_Party_ID__c</fullName>
        <label>Oracle Party ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Req_Code__c</fullName>
        <label>PO_Req_Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPP_Flag__c</fullName>
        <label>Customer Prod Protection Plan Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Changed_Action__c</fullName>
        <label>Parent Account Changed Action</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_ID__c</fullName>
        <label>Parent ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Opt_In__c</fullName>
        <label>Phone Opt In</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Parent_Account__c</fullName>
        <label>Related Pricing Template Customer ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Req_Code__c</fullName>
        <label>Release Req Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPC_Allowed__c</fullName>
        <defaultValue>&apos;Y&apos;</defaultValue>
        <description>Communities v2 - Allows user to register for a new SPC card on BSD&apos;s site.</description>
        <label>SPC_Allowed</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small &lt; $10K</fullName>
                </value>
                <value>
                    <fullName>Small $10K-$75K</fullName>
                </value>
                <value>
                    <fullName>Medium $75K-$150K</fullName>
                </value>
                <value>
                    <fullName>Standard $150K-$250K</fullName>
                </value>
                <value>
                    <fullName>Key $250K-$500K</fullName>
                </value>
                <value>
                    <fullName>Major $500K-$1M</fullName>
                </value>
                <value>
                    <fullName>K-12</fullName>
                </value>
                <value>
                    <fullName>Higher-Ed</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Enterprise $1M+</fullName>
                </value>
                <value>
                    <fullName>Other/Unknown - Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Small_Order_Dlv_Fees__c</fullName>
        <label>Small Order Delivery Fees</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State/Province</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sync_Failed_Reason__c</fullName>
        <externalId>true</externalId>
        <label>Sync Failed Reason</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt__c</fullName>
        <label>Tax Exempt</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Postal Code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <label>Account Final Staging</label>
    <nameField>
        <label>Account Final Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts Final Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>